tests/fail/fail_nullptr_auto.tk
fn main() -> i32 {
    auto *?p = nullptr
    return 0
}
